// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends only 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-1"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-1"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="max-width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA hidden"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
            </span>
             
             
          </div>
           
          <section
            aria-roledescription="friend-list"
            class="s-XLQf75fI0H0o"
          >
            <h3
              class="s-XLQf75fI0H0o"
            >
              Vos ami(e)s
            </h3>
             
            <div
              class="s-XLQf75fI0H0o"
            >
              <span
                aria-haspopup="menu"
                class="wrapper s-JM3fRWrV7jJU"
              >
                <fieldset
                  class="s-Fe6WNbR-55zp"
                >
                  <legend
                    class="s-Fe6WNbR-55zp"
                  >
                    Pseudo
                  </legend>
                   
                  <input
                    class="s-Fe6WNbR-55zp"
                    type="text"
                  />
                </fieldset>
                <!--&lt;Input&gt;-->
                 
                
                <!--&lt;Menu&gt;-->
              </span>
              <!--&lt;Typeahead&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  person_add_alt_1
                </span>
                
                
                
              </button>
              <!--&lt;Button&gt;-->
            </div>
             
             
            <ol
              class="s-XLQf75fI0H0o"
            >
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Fernand Naudin
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Fernand Naudin
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o isRequest"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 60px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Paul Wolfoni"
                    class="s-engCJu8q-fNe hasImage"
                    height="60"
                    referrerpolicy="no-referrer"
                    src="/tests/fixtures/avatar.png"
                    width="60"
                  />
                   
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Paul Wolfoni souhaite rejoindre vos ami(e)s
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      check
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      clear
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o isProposal"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #040404; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Raoul Wolfoni"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Raoul Wolfoni
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Demande envoyée à Raoul Wolfoni
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Pascal
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
             
          </section>
          <!--&lt;FriendList&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`Lobby 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-2"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                contacts
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-2"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </span>
             
            <div
              class="lobby-instructions s-ufy4N79qlNiA"
            >
              Pour transformer ce salon en jeu, choisissez un de vos jeux disponibles.
            </div>
             
            <section
              aria-expanded="true"
              aria-label="minimizable"
              class="s-vqhOCvFa7LzI vertical"
              id="minimizable-section-3"
              style="height: 15%;"
            >
              <menu
                class="bottom s-vqhOCvFa7LzI vertical"
              >
                <ol
                  class="buttonContainer s-vqhOCvFa7LzI"
                  role="tablist"
                >
                  <li
                    class="s-vqhOCvFa7LzI"
                  >
                    <button
                      aria-selected="false"
                      class="s-NMyTiX1zi6rz"
                      role="tab"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        question_answer
                      </span>
                      
                      
                      <span
                        class="badge s-NMyTiX1zi6rz"
                      >
                        F5
                      </span>
                      
                    </button>
                    <!--&lt;Button&gt;-->
                     
                  </li>
                </ol>
                 
                <div
                  aria-controls="minimizable-section-3"
                  class="gutter s-vqhOCvFa7LzI"
                  role="scrollbar"
                />
              </menu>
               
              <span
                class="s-vqhOCvFa7LzI"
              >
                <div
                  class="discussion s-4DrpFHLJm4IA"
                >
                  <div
                    class="messages s-4DrpFHLJm4IA"
                  >
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Qu'est-ce qui se passe encore ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Notre ami va se faire un plaisir de vous l'expliquer.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Et tu tiens ça d'où ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Je ne peux pas le dire, j'ai promis. Ce serait mal.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Alors ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Bon, on va y aller, hmm ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
                    </span>
                  </div>
                   
                  <form
                    class="s-4DrpFHLJm4IA"
                  >
                    <fieldset
                      class="s-Fe6WNbR-55zp"
                    >
                       
                      <input
                        class="s-Fe6WNbR-55zp"
                      />
                    </fieldset>
                    <!--&lt;Input&gt;-->
                     
                    <button
                      class="s-NMyTiX1zi6rz"
                      disabled=""
                      title="Envoyer à tous"
                      type="submit"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        send
                      </span>
                      
                      
                      
                    </button>
                    <!--&lt;Button&gt;-->
                  </form>
                </div>
                <!--&lt;Discussion&gt;-->
              </span>
            </section>
            <!--&lt;MinimizableSection&gt;-->
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`Multiple connected 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-7"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                contacts
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                auto_stories
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-7"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Fernand Naudin
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                >
                   
                  
                </legend>
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </span>
             
             
            <section
              aria-expanded="true"
              aria-label="minimizable"
              class="s-vqhOCvFa7LzI vertical"
              id="minimizable-section-8"
              style="height: 15%;"
            >
              <menu
                class="bottom s-vqhOCvFa7LzI vertical"
              >
                <ol
                  class="buttonContainer s-vqhOCvFa7LzI"
                  role="tablist"
                >
                  <li
                    class="s-vqhOCvFa7LzI"
                  >
                    <button
                      aria-selected="false"
                      class="s-NMyTiX1zi6rz"
                      role="tab"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        question_answer
                      </span>
                      
                      
                      <span
                        class="badge s-NMyTiX1zi6rz"
                      >
                        F5
                      </span>
                      
                    </button>
                    <!--&lt;Button&gt;-->
                     
                  </li>
                </ol>
                 
                <div
                  aria-controls="minimizable-section-8"
                  class="gutter s-vqhOCvFa7LzI"
                  role="scrollbar"
                />
              </menu>
               
              <span
                class="s-vqhOCvFa7LzI"
              >
                <div
                  class="discussion s-4DrpFHLJm4IA"
                >
                  <div
                    class="messages s-4DrpFHLJm4IA"
                  >
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Qu'est-ce qui se passe encore ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Notre ami va se faire un plaisir de vous l'expliquer.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Et tu tiens ça d'où ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Je ne peux pas le dire, j'ai promis. Ce serait mal.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Alors ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Bon, on va y aller, hmm ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
                    </span>
                  </div>
                   
                  <form
                    class="s-4DrpFHLJm4IA"
                  >
                    <fieldset
                      class="s-Fe6WNbR-55zp"
                    >
                       
                      <input
                        class="s-Fe6WNbR-55zp"
                      />
                    </fieldset>
                    <!--&lt;Input&gt;-->
                     
                    <button
                      class="s-NMyTiX1zi6rz"
                      disabled=""
                      title="Envoyer à tous"
                      type="submit"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        send
                      </span>
                      
                      
                      
                    </button>
                    <!--&lt;Button&gt;-->
                  </form>
                </div>
                <!--&lt;Discussion&gt;-->
              </span>
            </section>
            <!--&lt;MinimizableSection&gt;-->
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`No peers 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-4"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                auto_stories
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-4"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="max-width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA hidden"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
            </span>
             
             
          </div>
           
          <section
            class="s-HS2qv-2i033g"
          >
            <menu
              class="s-HS2qv-2i033g"
            >
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  navigate_before
                </span>
                
                
                
              </button>
              <!--&lt;Button&gt;-->
               
              1
              /
              4
               
              <button
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  navigate_next
                </span>
                
                
                
              </button>
              <!--&lt;Button&gt;-->
            </menu>
             
            <div
              class="image-container s-HS2qv-2i033g"
            >
              <img
                alt="Livre de règles, page 1"
                class="s-HS2qv-2i033g"
                src="http://localhost:3001/games/splendor/rules/1.webp"
              />
            </div>
          </section>
          <!--&lt;RuleViewer&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`No peers, no rules book 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-9"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-9"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="max-width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA hidden"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
            </span>
             
             
          </div>
           
          <section
            aria-roledescription="friend-list"
            class="s-XLQf75fI0H0o"
          >
            <h3
              class="s-XLQf75fI0H0o"
            >
              Vos ami(e)s
            </h3>
             
            <div
              class="s-XLQf75fI0H0o"
            >
              <span
                aria-haspopup="menu"
                class="wrapper s-JM3fRWrV7jJU"
              >
                <fieldset
                  class="s-Fe6WNbR-55zp"
                >
                  <legend
                    class="s-Fe6WNbR-55zp"
                  >
                    Pseudo
                  </legend>
                   
                  <input
                    class="s-Fe6WNbR-55zp"
                    type="text"
                  />
                </fieldset>
                <!--&lt;Input&gt;-->
                 
                
                <!--&lt;Menu&gt;-->
              </span>
              <!--&lt;Typeahead&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  person_add_alt_1
                </span>
                
                
                
              </button>
              <!--&lt;Button&gt;-->
            </div>
             
             
            <ol
              class="s-XLQf75fI0H0o"
            >
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Fernand Naudin
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Fernand Naudin
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o isRequest"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 60px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Paul Wolfoni"
                    class="s-engCJu8q-fNe hasImage"
                    height="60"
                    referrerpolicy="no-referrer"
                    src="/tests/fixtures/avatar.png"
                    width="60"
                  />
                   
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Paul Wolfoni souhaite rejoindre vos ami(e)s
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      check
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      clear
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o isProposal"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #040404; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Raoul Wolfoni"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Raoul Wolfoni
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Demande envoyée à Raoul Wolfoni
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 60px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="60"
                    referrerpolicy="no-referrer"
                    width="60"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Pascal
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <span
                      class="material-icons s-NMyTiX1zi6rz"
                    >
                      delete
                    </span>
                    
                    
                    
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
             
          </section>
          <!--&lt;FriendList&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`Single connected 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-5"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                contacts
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                auto_stories
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-5"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </span>
             
             
            <section
              aria-expanded="true"
              aria-label="minimizable"
              class="s-vqhOCvFa7LzI vertical"
              id="minimizable-section-6"
              style="height: 15%;"
            >
              <menu
                class="bottom s-vqhOCvFa7LzI vertical"
              >
                <ol
                  class="buttonContainer s-vqhOCvFa7LzI"
                  role="tablist"
                >
                  <li
                    class="s-vqhOCvFa7LzI"
                  >
                    <button
                      aria-selected="false"
                      class="s-NMyTiX1zi6rz"
                      role="tab"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        question_answer
                      </span>
                      
                      
                      <span
                        class="badge s-NMyTiX1zi6rz"
                      >
                        F5
                      </span>
                      
                    </button>
                    <!--&lt;Button&gt;-->
                     
                  </li>
                </ol>
                 
                <div
                  aria-controls="minimizable-section-6"
                  class="gutter s-vqhOCvFa7LzI"
                  role="scrollbar"
                />
              </menu>
               
              <span
                class="s-vqhOCvFa7LzI"
              >
                <div
                  class="discussion s-4DrpFHLJm4IA"
                >
                  <div
                    class="messages s-4DrpFHLJm4IA"
                  />
                   
                  <form
                    class="s-4DrpFHLJm4IA"
                  >
                    <fieldset
                      class="s-Fe6WNbR-55zp"
                    >
                       
                      <input
                        class="s-Fe6WNbR-55zp"
                      />
                    </fieldset>
                    <!--&lt;Input&gt;-->
                     
                    <button
                      class="s-NMyTiX1zi6rz"
                      disabled=""
                      title="Envoyer à tous"
                      type="submit"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        send
                      </span>
                      
                      
                      
                    </button>
                    <!--&lt;Button&gt;-->
                  </form>
                </div>
                <!--&lt;Discussion&gt;-->
              </span>
            </section>
            <!--&lt;MinimizableSection&gt;-->
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;

exports[`Single connected, no rules book, thread 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-ufy4N79qlNiA"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-10"
      style="width: auto;"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="buttonContainer s-vqhOCvFa7LzI"
          role="tablist"
        >
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                contacts
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                people_alt
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="s-NMyTiX1zi6rz"
              role="tab"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
              
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-10"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-ufy4N79qlNiA"
          style="width: 30vw"
        >
          <div
            class="peers s-ufy4N79qlNiA"
          >
            <span
              class="avatars s-ufy4N79qlNiA"
            >
               
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-ab4pMJzf-5--"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-ab4pMJzf-5--"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
                <legend
                  class="s-ab4pMJzf-5--"
                />
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </span>
             
             
            <section
              aria-expanded="true"
              aria-label="minimizable"
              class="s-vqhOCvFa7LzI vertical"
              id="minimizable-section-11"
              style="height: 15%;"
            >
              <menu
                class="bottom s-vqhOCvFa7LzI vertical"
              >
                <ol
                  class="buttonContainer s-vqhOCvFa7LzI"
                  role="tablist"
                >
                  <li
                    class="s-vqhOCvFa7LzI"
                  >
                    <button
                      aria-selected="false"
                      class="s-NMyTiX1zi6rz"
                      role="tab"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        question_answer
                      </span>
                      
                      
                      <span
                        class="badge s-NMyTiX1zi6rz"
                      >
                        F5
                      </span>
                      
                    </button>
                    <!--&lt;Button&gt;-->
                     
                  </li>
                </ol>
                 
                <div
                  aria-controls="minimizable-section-11"
                  class="gutter s-vqhOCvFa7LzI"
                  role="scrollbar"
                />
              </menu>
               
              <span
                class="s-vqhOCvFa7LzI"
              >
                <div
                  class="discussion s-4DrpFHLJm4IA"
                >
                  <div
                    class="messages s-4DrpFHLJm4IA"
                  >
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Qu'est-ce qui se passe encore ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Notre ami va se faire un plaisir de vous l'expliquer.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Et tu tiens ça d'où ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Je ne peux pas le dire, j'ai promis. Ce serait mal.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Alors ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Maître Follas
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Fernand Naudin
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Bon, on va y aller, hmm ?
                    </span>
                    <span
                      class="from s-4DrpFHLJm4IA"
                    >
                      Pascal
                    </span>
                    <span
                      class="message s-4DrpFHLJm4IA"
                    >
                      Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
                    </span>
                  </div>
                   
                  <form
                    class="s-4DrpFHLJm4IA"
                  >
                    <fieldset
                      class="s-Fe6WNbR-55zp"
                    >
                       
                      <input
                        class="s-Fe6WNbR-55zp"
                      />
                    </fieldset>
                    <!--&lt;Input&gt;-->
                     
                    <button
                      class="s-NMyTiX1zi6rz"
                      disabled=""
                      title="Envoyer à tous"
                      type="submit"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        send
                      </span>
                      
                      
                      
                    </button>
                    <!--&lt;Button&gt;-->
                  </form>
                </div>
                <!--&lt;Discussion&gt;-->
              </span>
            </section>
            <!--&lt;MinimizableSection&gt;-->
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Aside&gt;-->
</main>
`;
